# db.md

./: .gitignore  AGENTS.md  CCLA.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  SPEC.md  THIRD_PARTY_NOTICES  TOOLS.md  WHY.md  deny.toml  llms.txt
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  spec-proposal.md
.github/social/: social-card.html
.github/workflows/: audit.yml  cla.yml  licenses.yml  publish-check.yml  release.yml  smoke.yml  test.yml
HomebrewFormula/: dbmd.rb.template  render.sh
crates/dbmd-cli/: Cargo.toml  README.md  SPEC.md
crates/dbmd-cli/skills/db-md/: SKILL.md
crates/dbmd-cli/src/: cli.rs  context.rs  error.rs  main.rs  sanitize.rs
crates/dbmd-cli/src/cmd/: assets.rs  emit.rs  extract.rs  fm.rs  format.rs  grant.rs  graph.rs  index.rs  install_skill.rs  key.rs  link.rs  links.rs  log.rs  mirror.rs  mod.rs  outline.rs  propose.rs  query.rs  rename.rs  resolve.rs  search.rs  sections.rs  serve.rs  skill.rs  spec.rs  stats.rs  subscribe.rs  sync.rs  tree.rs  validate.rs  write.rs
crates/dbmd-cli/tests/: agent_eval.rs  assets.rs  broken_pipe.rs  bundled_assets.rs  e2e_corpus_a.rs  e2e_corpus_a_graph_log.rs  e2e_corpus_b.rs  emit.rs  examples_nonbreaking.rs  extract.rs  extract_e2e.rs  fm.rs  format.rs  graph_render.rs  index.rs  install_skill.rs  json_snapshots.rs  license_policy.rs  link_verbs.rs  links.rs  log.rs  log_rotation_e2e.rs  no_go_toolkit.rs  no_stub_bodies.rs  perf_budget.rs  query.rs  regression_clilog.rs  regression_clioutline.rs  regression_clirename.rs  regression_clisearch.rs  regression_coreindex.rs  regression_extract.rs  regression_followups.rs  regression_writepath.rs  sections.rs  skill.rs  validate.rs  writers.rs
crates/dbmd-cli/tests/common/: mod.rs
crates/dbmd-cli/tests/snapshots/: json_snapshots__fm_query_active_contacts.snap  json_snapshots__graph_backlinks_northstar_renewal.snap  json_snapshots__index_query_contacts.snap  json_snapshots__query_type_contact.snap  json_snapshots__search_renewal_conclusion.snap  json_snapshots__search_renewal_wiki_page.snap  json_snapshots__stats_overview.snap  json_snapshots__validate_all_clean.snap  json_snapshots__validate_working_set_clean.snap
crates/dbmd-core/: Cargo.toml  README.md
crates/dbmd-core/src/: assets.rs  emit.rs  extract.rs  fsx.rs  graph.rs  index.rs  lib.rs  linkmd.rs  log.rs  parser.rs  query.rs  render.rs  stats.rs  store.rs  summary.rs  time.rs  ulid.rs  validate.rs
crates/dbmd-core/tests/: corpora.rs  regression_validate.rs
examples/agency-knowledge-base/: DB.md  index.md  log.md
examples/agency-knowledge-base/records/: index.md
examples/agency-knowledge-base/records/clients/: brightmore-group.md  index.jsonl  index.md  lumio.md  riverkeep.md
examples/agency-knowledge-base/records/contacts/: daniel-mensah.md  eleanor-whitfield.md  grace-okafor.md  index.jsonl  index.md  maya-okonkwo.md  raymond-cole.md  theo-ramos.md
examples/agency-knowledge-base/records/meetings/: 2026-05-19-brightmore-campaign-review.md  2026-05-20-riverkeep-report-kickoff.md  2026-05-21-lumio-brand-review.md  index.jsonl  index.md
examples/agency-knowledge-base/records/playbooks/: client-handoff.md  index.jsonl  index.md  kickoff-that-works.md  scope-creep-handling.md
examples/agency-knowledge-base/records/projects/: brightmore-holiday-campaign.md  index.jsonl  index.md  lumio-brand-identity.md  riverkeep-annual-report.md
examples/agency-knowledge-base/sources/: index.md
examples/agency-knowledge-base/sources/emails/: index.jsonl  index.md
examples/agency-knowledge-base/sources/transcripts/: index.jsonl  index.md
examples/agency-knowledge-base/wiki/: index.md
examples/agency-knowledge-base/wiki/playbooks/: index.jsonl  index.md  scope-creep-handling.md
examples/customer-database/: DB.md  index.md
examples/customer-database/records/: index.md
examples/customer-database/records/accounts/: brightwave.md  cohort-labs.md  index.jsonl  index.md  meridian.md  northstar.md
examples/customer-database/records/calls/: 2026-04-15-northstar-quarterly-review.md  2026-05-22-northstar-renewal.md  2026-06-04-meridian-working-session.md  2026-06-09-meridian-qbr.md  2026-06-11-cohort-labs-discovery.md  2026-06-15-brightwave-qbr.md  index.jsonl  index.md
examples/customer-database/records/companies/: acme.md  brightwave.md  cohort-labs.md  index.jsonl  index.md  meridian.md  northstar.md
examples/customer-database/records/contacts/: david-kim.md  derek-shaw.md  index.jsonl  index.md  kyle-burton.md  laura-pine.md  marcus-okafor.md  nina-alvarez.md  renee-caldwell.md  sam-rivera.md  sarah-chen.md
examples/customer-database/records/synthesis/: account-pulse.md  index.jsonl  index.md
examples/customer-database/sources/: index.md
examples/customer-database/sources/emails/: index.jsonl  index.md
examples/customer-database/sources/hubspot-exports/: 2026-05-22-northstar-deal-export.md  2026-06-09-meridian-deal-export.md  index.jsonl  index.md
examples/customer-database/sources/transcripts/: index.jsonl  index.md
examples/customer-database/wiki/: index.md
examples/ops-store/: DB.md  index.md  log.md
examples/ops-store/records/: index.md
examples/ops-store/sources/: index.md
examples/personal-second-brain/: DB.md  index.md  log.md
examples/personal-second-brain/records/: index.md
examples/personal-second-brain/sources/: index.md
examples/personal-second-brain/wiki/: index.md
examples/research-wiki/: DB.md  index.md
examples/research-wiki/records/: index.md
examples/research-wiki/sources/: index.md
examples/research-wiki/wiki/: index.md
scripts/: add-spdx-headers.sh  install.sh
skills/db-md/: SKILL.md
tests/: PERF.md  gen-scale.rs  perf.py
tests/corpora/corpus-a-canonical/: .gen-expenses.py  .gen-index.py  DB.md  index.md  log.md
tests/corpora/corpus-b-edges/: DB.md  index.md  log.md
tests/corpora/corpus-c-formats/: README.md  gen_fixtures.py
tests/corpora/corpus-e-agent/: DB.md  NOTES.md
(+869 files in other folders)
