# db.md reference toolkit — Cargo workspace root.
#
# All logic lives in `dbmd-core`; `dbmd-cli` is a thin arg-parse/format
# wrapper that produces the single `dbmd` binary. Any Rust tool wanting to
# be db.md-aware does `cargo add dbmd-core` and gets the full library
# (ripgrep precedent: the `grep`/`ignore` libs do the work, `rg` is thin).

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.6.2"
edition = "2021"
# MSRV 1.88: forced by the `pdf-extract 0.12` security update (RUSTSEC-2026-0187),
# whose `lopdf 0.42` uses stable let-chains (Rust 1.88+). Verified as the exact
# floor — 1.87 fails to compile `lopdf`, 1.88 builds the whole workspace clean.
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/carloslfu/db.md"
authors = ["Carlos Galarza"]

# Shared dependency versions pinned once for the whole workspace.
# Licenses are recorded in THIRD_PARTY_NOTICES (permissive only — MIT /
# Apache-2.0 / BSD-2/3-Clause+0BSD / Unlicense / MPL-2.0 / Zlib / Unicode-3.0 /
# ISC / CDLA-Permissive-2.0;
# no GPL/AGPL/LGPL-static, and zero AI/LLM deps). The full allowlist and the
# shipped crates that carry the non-MIT/Apache terms (Unicode-3.0, BSD-3-Clause,
# Zlib) are enumerated in THIRD_PARTY_NOTICES and enforced by the
# `license_policy` test in crates/dbmd-cli/tests/license_policy.rs.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
clap = { version = "4", features = ["derive"] }
regex = "1"
grep = "0.3"
ignore = "0.4"
walkdir = "2"
# Unicode NFC normalization for the wiki-link comparison key (graph edge
# matching). Deterministic, table-driven Unicode algorithm — zero AI/LLM, zero
# embeddings. MIT OR Apache-2.0 (permissive); its transitive `tinyvec`
# (Zlib OR Apache-2.0 OR MIT) + `tinyvec_macros` (MIT OR Apache-2.0 OR Zlib)
# discharge via MIT/Apache, all on the allowlist. Recorded in THIRD_PARTY_NOTICES.
unicode-normalization = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
thiserror = "2"
# SHA-256 for the asset manifest (content hashing in dbmd-core's `assets`
# module). MIT/Apache-2.0, zero AI/LLM; already present in Cargo.lock
# (transitive), so promoting it to a direct dep adds no new crate to the tree.
sha2 = "0.10"
# Document text extraction (dbmd extract). All MIT — recorded in THIRD_PARTY_NOTICES.
# Zero AI/LLM, zero embeddings: these are deterministic format decoders.
pdf-extract = "0.12"      # PDF text layer (MIT); 0.12 pulls lopdf >=0.42 (RUSTSEC-2026-0187 fix)
calamine = "0.35"         # XLSX/ODS spreadsheet reader (MIT)
html2text = "0.17"        # HTML → plain text (MIT)
quick-xml = "0.41"        # docx/epub OOXML + XHTML parse (MIT); 0.41 fixes RUSTSEC-2026-0194/0195
# `zip` with only the DEFLATE backend: docx/xlsx/epub containers use STORED +
# DEFLATE only. Dropping default features removes the bzip2/lzma/zstd backends
# (and the `bzip2-1.0.6`-licensed `libbz2-rs-sys`), shrinking the tree. The
# DEFLATE backend it keeps pulls in `flate2` → `zlib-rs` (Zlib) + `zopfli`
# (Apache-2.0); both are permissive and recorded in THIRD_PARTY_NOTICES (the
# Zlib obligation is why `Zlib` is on the allowlist).
# Kept on 7.x deliberately: the deflate-only feature set is all docx/xlsx/epub
# need and it keeps the dependency surface small. (The workspace MSRV is now 1.88,
# so zip 8.x's 1.88 requirement is no longer the blocker; bumping it is a
# separate, unneeded change.)
zip = { version = "7.2", default-features = false, features = ["deflate"] }
# HTTP client for the link.md client verbs (dbmd-core's `linkmd` module,
# feature `link`, default-on; a format-only library consumer opts out with
# default-features = false). Blocking, rustls-based TLS (no OpenSSL, no system
# TLS) so the released static binaries carry their own trust stack on every
# distro. ureq itself is MIT OR Apache-2.0; its TLS closure adds ring
# (`Apache-2.0 AND ISC`), rustls-webpki + untrusted (ISC), and webpki-roots
# (CDLA-Permissive-2.0, the CCADB root-bundle data license) — all permissive,
# all on the allowlist, all recorded with call-outs in THIRD_PARTY_NOTICES.
# Zero AI/LLM: this is transport plumbing, and the toolkit still never phones
# home on its own (no telemetry, no auto-update) — network I/O happens only
# when a link verb is explicitly invoked against a hub the user configured.
ureq = { version = "2.12", default-features = false, features = ["tls", "gzip"] }
tempfile = "3"
insta = "1"
assert_cmd = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
